# gpt_vk_api_example

./: .gitignore  Readme.md  client.py  main.py  pyproject.toml  raw_code.py  secrets.py
