[tool.poetry]
name = "gpt-vk-api-example"
version = "0.1.0"
description = ""
authors = ["Vladimir Gerasimenko <vladworldss@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
vk-api = "^11.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
